# AcceptMe

./: .gitignore  CODE_EXPLANATION.md  INSTALL_RUST.md  README.md  RUN.md  SETUP.md  create-icons.ps1  create_icons.py  generate-icon.js  index.html  package-lock.json  package.json  run.bat  run.ps1
python_backend/: auto_accept_service.py  league_client.py  requirements.txt
src/: App.css  App.tsx  ChampionPreferences.tsx  styles.css
src-tauri/: Cargo.toml  build_errors.txt  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/lcu/: client.rs  mod.rs
src-tauri/src/core/models/: mod.rs  preferences.rs  state.rs
src-tauri/src/core/settings/: mod.rs  storage.rs
src-tauri/src/data/: champions.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/auto_accept/: commands.rs  loop_logic.rs  mod.rs
src-tauri/src/features/auto_ban/: commands.rs  logic.rs  mod.rs
src-tauri/src/features/auto_hover/: commands.rs  logic.rs  mod.rs
src-tauri/src/features/auto_lock/: commands.rs  logic.rs  mod.rs
src-tauri/src/features/champion_select/: commands.rs  loop_logic.rs  mod.rs  session.rs
src/components/ChampionPreferences/: ChampionPickerModal.tsx  PickBanSection.tsx  QuickSettings.tsx  RoleTabs.tsx
src/constants/: roles.ts
src/types/: index.ts
src/utils/: championUtils.ts
